--- a/css/common.scss
+++ b/css/common.scss
@@ -17,6 +17,7 @@ $cl-bg-grey: #f5f5f5;
 $cl-dark-bg: #212121;
 $cl-disable: #DBDBDB;
 $cl-border: #2D2D2D;
+$cl-border-li: #C1C1C1;
 
 $cl-bg-beige: #F6F1EE;
 $dur-default: 400ms;
