--- a/css/typo.scss
+++ b/css/typo.scss
@@ -94,8 +94,14 @@
     &-20 {
         @include size(2rem);
     }
+    &-22 {
+        @include size(2.2rem);
+    }
     &-24 {
         @include size(2.4rem);
+    }
+    &-28 {
+        @include size(2.8rem);
     }
     &-32 {
         @include size(3.2rem);
@@ -206,6 +212,39 @@
             line-height: 1.5em;
         }
     }  
+}
+.arr-wrap {
+    position: relative;
+    overflow: hidden;
+    .ic-arr-main {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: auto;
+        left: 0;
+        right: auto;
+    }
+    .ic-arr-clone {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: auto;
+        left: 0;
+        right: auto;
+        transform: translate(-150%, 150%);
+    }
+}
+.hover-arr:hover {
+    .ic-arr-main {
+        transform: translate(150%,-150%);
+        transition: transform .6s cubic-bezier(.4,0,.1,1);
+    }
+    .ic-arr-clone {
+        transform: translate(0,0);
+        transition: transform .6s cubic-bezier(.4,0,.1,1);
+    }
 }
 .heading {
     font-family: 'Poppins';
