--- a/css/about.scss
+++ b/css/about.scss
@@ -611,6 +611,7 @@
         }
         &-item {
             &-thumb {
+                width: 100%;
                 height: 33rem;
                 margin-bottom: 1.6rem;
             }
