--- a/css/solution.scss
+++ b/css/solution.scss
@@ -477,6 +477,7 @@
             &-inner {
                 display: flex;
                 flex-direction: column;
+                row-gap: 6rem;
             }
             &-item {
                 &-thumb {
