--- a/css/footer.scss
+++ b/css/footer.scss
@@ -230,6 +230,9 @@
             width: 100%;
             height: 100%;
             opacity: .1;
+            video {
+                pointer-events: none;
+            }
         }
     }
 }
