--- a/css/insight.scss
+++ b/css/insight.scss
@@ -23,6 +23,24 @@
         }
     }
 }
+@include md {
+    .ins-hero {
+        padding-top: 18.8rem;
+        padding-bottom: 13.8rem;
+        &-title {
+            line-height: 1.2em;
+        }
+    }
+}
+@include sm {
+    .ins-hero {
+        padding-top: 20rem;
+        padding-bottom: 20rem;
+        &-title {
+            font-size: 4.8rem;
+        }
+    }
+}
 .ins-news {
     padding-top: 12rem;
     padding-bottom: 12rem;
@@ -44,12 +62,19 @@
             @include size(100%);
             max-width: 36.2rem;
             max-height: 19.6rem;
+            opacity: 0;
+            @include transition(all 400ms ease);
+            @include transform(scale(.95));
             &-img {
                 @include size(100%);
                 img {
                     height: 100%;
                     object-fit: contain;
                 }
+            }
+            &.active {
+                opacity: 1;
+                @include transform(scale(1));
             }
         }
     }
@@ -67,7 +92,6 @@
             grid-row: 3/4;
             display: flex;
             column-gap: .8rem;
-            align-self: end;
             .swiper-pagi-prev, .swiper-pagi-next {
                 display: flex;
                 align-items: center;
@@ -90,9 +114,16 @@
         &-inner {
             display: flex;
             flex-direction: column;
+            &.swiper {
+                height: 66rem;
+            }
+        }
+        &-list {
+            // height: 100%;
         }
         &-item {
             position: relative;
+            height: calc(100% / 4) !important;
             &-logo {
                 display: none;
             }
@@ -103,7 +134,6 @@
                 position: relative;
                 padding-top: 3rem;
                 padding-bottom: 3rem;
-                position: relative;
             }
             &-year {
                 position: absolute;
@@ -112,10 +142,13 @@
                 color: rgba($cl-txt-sub, 1)
             }
             &-title {
-                max-width: 60.5rem;
                 margin-bottom: .4rem;
                 @include transition(color 400ms ease);
                 max-width: 50rem;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;  
+                overflow: hidden;
             }
             &-name {
                 color: rgba($cl-txt-desc, 1);
@@ -143,7 +176,113 @@
         }
     }
 }
+@include md {
+    .ins-news {
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+        &-logo {
+            display: none;
+        }
+        &-main {
+            grid-column: 1/-1;
+            &-title-wrap {
+                margin-bottom: 3.2rem;
+            }
+            &-title {
+                font-size: 4.4rem;
+                line-height: 1.2em;
+            }
+            &-inner {
+                &.swiper {
+                    height: 39.6rem;
+                }
+            }
+            &-item {
+                height: calc(100% / 2) !important;
+                padding-right: 1.6rem;
+                &.swiper-slide {
+                    display: flex;
+                    column-gap: 1.6rem;
+                }
+                &-logo {
+                    display: flex;
+                    border-radius: 1.2rem;
+                    overflow: hidden;
+                    background-color: #1D3340;
+                    padding: 1rem;
+                    width: 12.2rem;
+                    margin-top: 2.4rem;
+                    margin-bottom: 2.4rem;
+                    flex-shrink: 0;
+                }
+                &-content {
+                    padding-top: 2.4rem;
+                    padding-bottom: 2.4rem;
+                }
+                &-year {
+                    position: relative;
+                    top: auto;
+                    right: auto;
+                    margin-bottom: .8rem;
+                    font-size: 1.4rem;
+                    line-height: 1.5em;
+                }
+                &-title {
+                    max-width: 23.1rem;
+                    -webkit-line-clamp: 3;
+                    font-size: 2rem;
+                    line-height: 1.5em;
+                }
+                &-name {
+                    font-size: 1.4rem;
+                    line-height: 1.5em;
+                    margin-top: auto;
+                }
+            }
+        }
+    }
+}
+@include sm {
+    .ins-news {
+        &-main {
+            &-title-wrap {
+                margin-bottom: 4rem;
+            }
+            &-title {
+                font-size: 3.6rem;
+            }
+            &-inner {
+                &.swiper {
+                    height: 71.2rem;
+                }
+            }
+            &-item {
+                height: calc(100% / 4) !important;
+                &.swiper-slide {
+                    padding-right: 0;
+                }
+                &-title {
+                    line-height: 1.4em;
+                }
+                &-logo {
+                    width: 10rem;
+                    height: 13.8rem;
+                    margin-top: 2rem;
+                    margin-bottom: 2rem;
+                }
+                &-content {
+                    padding-top: 2rem;
+                    padding-bottom: 2rem;
+                }
+                &-year {
+                    margin-bottom: .4rem;
+                }
+            }
+        }
+    }
+}
 .ins-art {
+    padding-bottom: 12rem;
     &-title-wrap {
         grid-column: 1/-1;
         max-width: 102.2rem;
@@ -164,23 +303,153 @@
         margin: 0 auto;
         &-inner {
             width: 100%;
+            margin-bottom: 12rem;
         }
         &-item {
             padding-top: 6rem;
             padding-bottom: 6rem;
             display: grid;
             grid-template-columns: repeat(10, 1fr);
+            position: relative;
             &-thumb {
                 grid-column: 1/5;
                 height: 32rem;
                 overflow: hidden;
                 border-radius: 1.2rem;
+                height: 32rem;
+                img {
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
             &-content {
                 grid-column: 6/11;
                 display: flex;
                 flex-direction: column;
                 align-items: start;
+            }
+            &-label {
+                margin-bottom: 2rem;
+            }
+            &-title {
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;  
+                overflow: hidden;
+            }
+            .arr-wrap {
+                position: absolute;
+                bottom: 6rem;
+                right: 0;
+            }
+            .line {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                .line-inner {
+                    position: absolute;
+                    @include size(100%);
+                    top: 0;
+                    left: 0;
+                    transform-origin: left;
+                    background-color: rgba($cl-txt-sub, 1);
+                    @include transform(scaleX(0));
+                    @include transition(transform 400ms ease);
+                }
+            }
+            &:hover {
+                .line {
+                    .line-inner {
+                        @include transform(scaleX(1));
+                    }
+                }
+            }
+        }
+        &-btn-wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+@include md {
+    .ins-art {
+        padding-bottom: 10rem;
+        &-title-wrap {
+            text-align: left;
+            align-items: start;
+            margin-bottom: 6rem;
+        }
+        &-title {
+            font-size: 4.4rem;
+            line-height: 1.2em;
+        }
+        &-main {
+            &-inner {
+                margin-bottom: 6rem;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: var(--grid-gap);
+            }
+            &-item {
+                padding-top: 1.6rem;
+                padding-bottom: 3.2rem;
+                display: flex;
+                flex-direction: column-reverse;
+                &-thumb {
+                    height: 32rem;
+                    overflow: hidden;
+                    border-radius: 1.2rem;
+                }
+                &-content {
+                    margin-bottom: 1.6rem;
+                }
+                &-label {
+                    margin-bottom: 1.6rem;
+                }
+                &-title {
+                    font-size: 2.4rem;
+                    line-height: 1.5em;
+                }
+                .arr-wrap {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+@include sm {
+    .ins-art {
+        padding-bottom: 8rem;
+        &-title-wrap {
+            margin-bottom: 4rem;
+        }
+        &-title {
+            font-size: 3.6rem;
+        }
+        &-main {
+            &-inner {
+                margin-bottom: 4rem;
+                grid-template-columns: repeat(1, 1fr);
+                gap: var(--grid-gap);
+            }
+            &-item {
+                &-thumb {
+                    height: 25.6rem;
+                }
+                &-content {
+                    margin-bottom: 1.6rem;
+                }
+                &-label {
+                    margin-bottom: 1.6rem;
+                }
+                &-title {
+                    font-size: 2.4rem;
+                    line-height: 1.5em;
+                }
+                .arr-wrap {
+                    display: none;
+                }
             }
         }
     }
