--- a/css/typo.scss
+++ b/css/typo.scss
@@ -68,6 +68,9 @@
     &-btn {
         font-family: "Poppins";
     }
+    &-opt {
+        color: rgba($cl-txt-desc, 1);
+    }
 }
 
 //heading
@@ -184,6 +187,22 @@
     }
     &-sm {
         padding: .9rem 1.9rem;
+    }
+    &-ic {
+        @include size(3.6rem);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        border: solid 1px rgba($cl-border, .2);
+        @include transition(all 400ms ease);
+        color: rgba($cl-txt, 1);
+        background-color: rgba($cl-txt, 0);
+        &:hover {
+            border-color: transparent;
+            color: rgba($cl-white, 1);
+            background-color: rgba($cl-txt, 1);
+        }
     }
 }
 .line {
@@ -313,4 +332,12 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+input, textarea {
+    appearance: none;
+    -webkit-appearance: none;
+}
+textarea {
+    resize: vertical;
 }
