--- a/css/common.scss
+++ b/css/common.scss
@@ -52,7 +52,25 @@ html {
         font-size: 2.667vw;
     }
 }
+html.lenis {
+    height: auto;
+}
 
+.lenis.lenis-smooth {
+    scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+    overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+    overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+    pointer-events: none;
+}
 a {
     text-decoration: none;
     color: inherit;
