--- a/css/contact.scss
+++ b/css/contact.scss
@@ -181,7 +181,7 @@
             &-inner {
                 flex-direction: row;
                 column-gap: 3.2rem;
-                padding: 1.6rem 1.6rem 2.4rem;
+                padding: 1.6rem;
                 &.hidden-dk {
                     display: flex;
                 }
