--- a/css/blogdtl.scss
+++ b/css/blogdtl.scss
@@ -17,6 +17,11 @@
         border-radius: 2rem;
         max-height: 56rem;
         overflow: hidden;
+        opacity: 0;
+        @include transition(opacity 400ms ease);
+        &.active {
+            opacity: 1;
+        }
         img {
             object-fit: cover;
             height: 100%;
@@ -51,6 +56,7 @@
             margin-bottom: 1.6rem;
             padding-left: 2.8rem;
             list-style: disc;
+            color: rgba($cl-body, 1);
             li {
                 margin-bottom: .4rem;
                 &:last-child {
@@ -253,6 +259,12 @@
                 .icon {
                     color: rgba($cl-border, 1);
                     @include transition(opacity 400ms ease);
+                }
+                &:hover {
+                    background-color: rgba($cl-white, 1);
+                    .icon {
+                        color: rgba($cl-border, 1);
+                    }
                 }
                 &.swiper-button-disabled {
                     .icon {
