--- a/css/insight.scss
+++ b/css/insight.scss
@@ -60,13 +60,21 @@
         &-item {
             position: absolute;
             @include size(100%);
-            max-width: 36.2rem;
-            max-height: 19.6rem;
             opacity: 0;
             @include transition(all 400ms ease);
-            @include transform(scale(.95));
+            &-inner {
+                @include size(100%);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: var(--press_color);
+            }
             &-img {
                 @include size(100%);
+                max-width: 36.2rem;
+                max-height: 19.6rem;
+                @include transform(scale(.95));
+                @include transition(all 400ms ease);
                 img {
                     height: 100%;
                     object-fit: contain;
@@ -74,7 +82,9 @@
             }
             &.active {
                 opacity: 1;
-                @include transform(scale(1));
+                .ins-news-logo-item-img {
+                    @include transform(scale(1));
+                }
             }
         }
     }
@@ -104,7 +114,13 @@
                     color: rgba($cl-border, 1);
                     @include transition(opacity 400ms ease);
                 }
+                &:hover {
+                    .icon {
+                        color: rgba($cl-white, 1);
+                    }
+                }
                 &.swiper-button-disabled {
+                    pointer-events: none;
                     .icon {
                         opacity: .2;
                     }
@@ -197,6 +213,16 @@
                     height: 39.6rem;
                 }
             }
+            &-pagi {
+                .swiper-pagi-prev, .swiper-pagi-next {
+                    &:hover {
+                        background-color: rgba($cl-white, 1);
+                        .icon {
+                            color: rgba($cl-border, 1);
+                        }
+                    }
+                }
+            }
             &-item {
                 height: calc(100% / 2) !important;
                 padding-right: 1.6rem;
@@ -208,12 +234,12 @@
                     display: flex;
                     border-radius: 1.2rem;
                     overflow: hidden;
-                    background-color: #1D3340;
                     padding: 1rem;
                     width: 12.2rem;
                     margin-top: 2.4rem;
                     margin-bottom: 2.4rem;
                     flex-shrink: 0;
+                    background-color: var(--press_color_mb);
                 }
                 &-content {
                     padding-top: 2.4rem;
@@ -303,7 +329,6 @@
         margin: 0 auto;
         &-inner {
             width: 100%;
-            margin-bottom: 12rem;
         }
         &-item {
             padding-top: 6rem;
@@ -311,6 +336,9 @@
             display: grid;
             grid-template-columns: repeat(10, 1fr);
             position: relative;
+            &.hidden {
+                display: none;
+            }
             &-thumb {
                 grid-column: 1/5;
                 height: 32rem;
@@ -328,19 +356,25 @@
                 flex-direction: column;
                 align-items: start;
             }
-            &-label {
-                margin-bottom: 2rem;
-            }
             &-title {
                 display: -webkit-box;
                 -webkit-line-clamp: 3;
                 -webkit-box-orient: vertical;  
                 overflow: hidden;
+                margin-bottom: 2rem;
             }
-            .arr-wrap {
-                position: absolute;
-                bottom: 6rem;
-                right: 0;
+            &-info {
+                width: 100%;
+                margin-top: auto;
+                display: flex;
+                align-items: end;
+                justify-content: space-between;
+            }
+            &-link {
+                color: rgba($cl-txt-desc, 1);
+                @include transition(color 400ms ease);
+                display: inline-block;
+                overflow: hidden;
             }
             .line {
                 position: absolute;
@@ -363,12 +397,19 @@
                         @include transform(scaleX(1));
                     }
                 }
+                .ins-art-main-item-link {
+                    color: rgba($cl-dark-blue, 1);
+                }
             }
         }
         &-btn-wrap {
+            margin-top: 12rem;
             display: flex;
             align-items: center;
             justify-content: center;
+            &.hidden {
+                display: none;
+            }
         }
     }
 }
@@ -386,7 +427,6 @@
         }
         &-main {
             &-inner {
-                margin-bottom: 6rem;
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 gap: var(--grid-gap);
@@ -397,12 +437,15 @@
                 display: flex;
                 flex-direction: column-reverse;
                 &-thumb {
+                    margin-top: auto;
                     height: 32rem;
                     overflow: hidden;
                     border-radius: 1.2rem;
                 }
                 &-content {
                     margin-bottom: 1.6rem;
+                    flex-direction: column-reverse;
+                    justify-content: start;
                 }
                 &-label {
                     margin-bottom: 1.6rem;
@@ -410,10 +453,17 @@
                 &-title {
                     font-size: 2.4rem;
                     line-height: 1.5em;
+                    margin-bottom: 0rem;
+                }
+                &-link {
+                    display: none;
                 }
                 .arr-wrap {
                     display: none;
                 }
+            }
+            &-btn-wrap {
+                margin-top: 6rem;
             }
         }
     }
@@ -429,7 +479,6 @@
         }
         &-main {
             &-inner {
-                margin-bottom: 4rem;
                 grid-template-columns: repeat(1, 1fr);
                 gap: var(--grid-gap);
             }
@@ -441,7 +490,7 @@
                     margin-bottom: 1.6rem;
                 }
                 &-label {
-                    margin-bottom: 1.6rem;
+                    margin-bottom: .8rem;
                 }
                 &-title {
                     font-size: 2.4rem;
@@ -450,6 +499,9 @@
                 .arr-wrap {
                     display: none;
                 }
+            }
+            &-btn-wrap {
+                margin-top: 4rem;
             }
         }
     }
