--- a/css/home.scss
+++ b/css/home.scss
@@ -327,12 +327,17 @@
             width: 100%;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            column-gap: 6rem;
+            justify-content: center;
+            flex-wrap: wrap;
+            column-gap: 0rem;
             //animation: animMarquee 20s infinite linear;
         }
         &-item {
             height: 6rem;
+            width: calc(100% / 6);
+            display: flex;
+            align-items: center;
+            justify-content: center;
             img {
                 height: 100%;
                 width: auto;
@@ -365,12 +370,19 @@
             column-gap: 2rem;
         }
         &-marquee {
-            column-gap: 4rem;
             &-inner {
-                column-gap: 4rem;
+                display: felx;
+                column-gap: 0;
+                row-gap: 3.2rem;
+                flex-wrap: wrap;
+                justify-content: center;
             }
             &-item {
-                height: 3.6rem;
+                width: 25%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 4.2rem;
             }
         }
     } 
@@ -381,19 +393,12 @@
         &-label-wrap {
         }
         &-marquee {
-            column-gap: 2rem;
-            &.hidden-dk {
-                display: flex;
-                margin-top: 2rem;
-                .home-part-marquee-inner {
-                    animation: animMarqueeRev 20s infinite linear;    
-                }
-            }
             &-inner {
-                column-gap: 2rem;
+                row-gap: 2rem;
             }
             &-item {
-                height: 5.4rem;
+                width: calc(100% / 3);
+                height: 3.6rem;
             }
         }
     } 
@@ -515,9 +520,9 @@
                     @include transition(opacity 400ms ease);
                 }
                 &:hover {
-                    background-color: rgba($cl-white, 1);
+                    background-color: rgba($cl-txt, 1);
                     .icon {
-                        color: rgba($cl-border, 1);
+                        color: rgba($cl-white, 1);
                     }
                 }
                 &.swiper-button-disabled {
