--- a/css/blogdtl.scss
+++ b/css/blogdtl.scss
@@ -261,13 +261,16 @@
                     @include transition(opacity 400ms ease);
                 }
                 &:hover {
-                    background-color: rgba($cl-white, 1);
+                    background-color: rgba($cl-txt, 1);
                     .icon {
-                        color: rgba($cl-border, 1);
+                        color: rgba($cl-white, 1);
                     }
                 }
                 &.swiper-button-disabled {
+                    background-color: rgba($cl-txt, 0);
+                    pointer-events: none;
                     .icon {
+                        color: rgba($cl-txt, 1);
                         opacity: .2;
                     }
                 }
