--- a/css/home.scss
+++ b/css/home.scss
@@ -24,6 +24,7 @@
         grid-column: 9/17;
     }
     &-title {
+        max-width: 70rem;
         margin-top: 6rem;
         margin-bottom: 4rem;
     }
