--- a/css/common.scss
+++ b/css/common.scss
@@ -40,7 +40,7 @@ html {
     //     font-size: 12.5px;
     // }
     @media only screen and (max-width: 1729px) and (min-width: 991px) {
-        @media screen and (min-device-aspect-ratio: 1600 / 800) {
+        @media screen and (min-aspect-ratio: 1600 / 800) {
             font-size: 0.9259259259vh;
         }
     }
