--- a/css/footer.scss
+++ b/css/footer.scss
@@ -129,11 +129,18 @@
             }
             &-link {
                 display: flex;
-                align-items: center;
+                align-items: start;
                 column-gap: .8rem;
+                &-ic {
+                    flex-shrink: 0;
+                    margin-top: .7rem;
+                }
                 &-txt {
                     color: rgba($cl-white, .6);
                     @include transition(color 400ms ease);
+                    &-add {
+                        max-width: 28rem;
+                    }
                 }
                 &.active, &:hover {
                     .ft-ctc-link-txt {
