--- a/css/typo.scss
+++ b/css/typo.scss
@@ -206,6 +206,9 @@
             background-color: rgba($cl-txt, 1);
         }
     }
+    &-w-ic-sm {
+        column-gap: 1rem;
+    }
 }
 .line {
     width: 100%;
