--- a/css/typo.scss
+++ b/css/typo.scss
@@ -1,42 +1,42 @@
 @font-face {
     font-family: 'Poppins';
-    src: url('../fonts/Poppins-Regular.ttf');
+    src: url('../fonts/Poppins-Regular.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Poppins';
     font-weight: 500;
-    src: url('../fonts/Poppins-Medium.ttf');
+    src: url('../fonts/Poppins-Medium.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Poppins';
     font-weight: 700;
-    src: url('../fonts/Poppins-Bold.ttf');
+    src: url('../fonts/Poppins-Bold.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Aeonik';
-    src: url('../fonts/Aeonik-Regular.otf');
+    src: url('../fonts/Aeonik-Regular.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Aeonik';
     font-weight: 500;
-    src: url('../fonts/Aeonik-Medium.otf');
+    src: url('../fonts/Aeonik-Medium.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Aeonik';
     font-weight: 700;
-    src: url('../fonts/Aeonik-Bold.otf');
+    src: url('../fonts/Aeonik-Bold.woff');
     font-display: swap;
 }
 @font-face {
     font-family: 'Georgia';
     font-weight: 400;
     font-style: italic;
-    src: url('../fonts/Georgia Italic.ttf');
+    src: url('../fonts/Georgia Italic.woff');
     font-display: swap;
 }
 .link-hidden {
