--- a/css/typo.scss
+++ b/css/typo.scss
@@ -93,6 +93,9 @@
     &-12 {
         @include size(1.2rem);
     }
+    &-14 {
+        @include size(1.4rem);
+    }
     &-16 {
         @include size(1.6rem);
     }
