--- a/css/header.scss
+++ b/css/header.scss
@@ -296,6 +296,7 @@
             display: flex;
             align-items: center;
             justify-content: end;
+            gap: 0 1.6rem
         }
         &.on-scroll {
             background-color: rgba($cl-white, 1);
