--- a/css/header.scss
+++ b/css/header.scss
@@ -165,7 +165,7 @@
             opacity: 0;
             pointer-events: none;
             @include transition(all .5s ease-out);
-
+            filter: drop-shadow(0 .2rem 1rem rgba(0, 0, 0, .1));
             &.active {
                 @include transform(translateY(1rem));
                 opacity: 1;
